[TASK] #125 - add font style to all p-tags and table cells

--- a/Resources/Private/Partials/Mail/Cart.html
+++ b/Resources/Private/Partials/Mail/Cart.html
@@ -1,4 +1,4 @@
-<table style="width: 100%; border-collapse: collapse; font-size:12px;" border="1">
+<table width="600" style="width: 100%; border-collapse: collapse; font-family: Arial, Helvetica, sans-serif; font-size:12px;" border="1">
     <colgroup>
         <col span="2"/>
         <col width="1"/>
@@ -7,18 +7,18 @@
     </colgroup>
     <thead>
     <tr class="first last" style="background-color:#3b7eb0; color:#fff;">
-        <th rowspan="1" colspan="2" style="text-align: left; padding: 3px;">
+        <th rowspan="1" colspan="2" style="text-align: left; padding: 3px; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <f:translate key="tx_cart_domain_model_order_product.title"/>
         </th>
-        <th colspan="1" class="a-center" style="padding: 3px;">
+        <th colspan="1" class="a-center" style="padding: 3px; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <f:translate key="tx_cart_domain_model_order_product.price"/>
         </th>
 
-        <th rowspan="1" class="a-center" style="padding: 3px;">
+        <th rowspan="1" class="a-center" style="padding: 3px; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <f:translate key="tx_cart_domain_model_order_product.count"/>
         </th>
 
-        <th colspan="1" class="a-center" style="padding: 3px;">
+        <th colspan="1" class="a-center" style="padding: 3px; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <f:translate key="tx_cart_domain_model_order_product.price_total"/>
         </th>
     </tr>
