--- a/Resources/Private/Templates/Mail/Paid/Seller.html
+++ b/Resources/Private/Templates/Mail/Paid/Seller.html
@@ -1,17 +1,31 @@
 <f:layout name="Mail"/>
 
 <f:section name="main">
-    <p style="background-color:#3b7eb0;color:#fff;padding:5px;">
-        <b><f:translate key="tx_cart.mail.order_information" />:</b>
-    </p>
+    <table width="600" cellspacing="0" border="0" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
+        <tr>
+            <td height="10" style="font-size:10px; line-height:10px;">   </td><!-- Spacer -->
+        </tr>
+        <tr>
+            <td width="600" height="34" style="background-color:#2d4554; color:#fff; padding:10px 5px; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
+                <b><f:translate key="tx_cart.mail.order_information" />:</b>
+            </td>
+        </tr>
+    </table>
 
     <f:render partial="Mail/Address" arguments="{billingAddress: billingAddress, shippingAddress: shippingAddress}"/>
 
-    <p style="background-color:#3b7eb0;color:#fff;padding:5px;">
-        <b><f:translate key="tx_cart.mail.order_summary" />:</b>
-    </p>
+    <table width="600" cellspacing="0" border="0" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
+        <tr>
+            <td height="10" style="font-size:10px; line-height:10px;">   </td><!-- Spacer -->
+        </tr>
+        <tr>
+            <td width="600" height="34" style="background-color:#2d4554; color:#fff; padding:10px 5px; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
+                <b><f:translate key="tx_cart.mail.order_summary" />:</b>
+            </td>
+        </tr>
+    </table>
 
-    <table cellspacing="0" border="0">
+    <table cellspacing="0" border="0" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
         <tbody>
         <f:if condition="{orderItem.orderNumber}">
             <tr>
