--- a/Resources/Private/Partials/Cart/OrderForm/Address/Shipping.html
+++ b/Resources/Private/Partials/Cart/OrderForm/Address/Shipping.html
@@ -191,6 +191,42 @@
                         </f:if>
                     </li>
                 </f:if>
+                
+                <f:if condition="{0: settings.validation.shippingAddress.fields.phone.validator} != {0: 'Empty'}">
+                    <li>
+                        <f:if condition="{0: settings.validation.shippingAddress.fields.phone.validator} == {0: 'NotEmpty'}">
+                            <f:then>
+                                <label for="shippingAddress:phone" class="required">
+                                    <f:translate key="tx_cart_domain_model_order_address.phone"/>
+                                    <em>*</em>
+                                </label>
+                                <div class="input-box">
+                                    <f:form.textfield id="shippingAddress:phone"
+                                                      class="form-control"
+                                                      name="shippingAddress[phone]"
+                                                      value="{shippingAddress.phone}"
+                                                      data="{required:'true'}"/>
+                                    <f:form.validationResults for="shippingAddress">
+                                        <f:if condition="{validationResults.flattenedErrors.phone}">
+                                            <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.phone.0.message}</div>
+                                        </f:if>
+                                    </f:form.validationResults>
+                                </div>
+                            </f:then>
+                            <f:else>
+                                <label for="shippingAddress:phone">
+                                    <f:translate key="tx_cart_domain_model_order_address.phone"/>
+                                </label>
+                                <div class="input-box">
+                                    <f:form.textfield id="shippingAddress:phone"
+                                                      class="form-control"
+                                                      name="shippingAddress[phone]"
+                                                      value="{shippingAddress.phone}"/>
+                                </div>
+                            </f:else>
+                        </f:if>
+                    </li>
+                </f:if>
 
                 <f:if condition="{0: settings.validation.shippingAddress.fields.company.validator} != {0: 'Empty'}">
                     <li>
