--- a/Resources/Private/Partials/Cart/OrderForm/Cart.html
+++ b/Resources/Private/Partials/Cart/OrderForm/Cart.html
@@ -8,7 +8,7 @@
             <ul class="form-list">
                 <li class="fields">
                     <div class="field acceptTerms">
-                        <label>
+                        <label for="orderItem:acceptTerms">
                             <f:if condition="{0: settings.validation.orderItem.fields.acceptTerms.validator} == {0: 'Boolean'}">
                                 <f:form.checkbox id="orderItem:acceptTerms"
                                                  name="orderItem[acceptTerms]"
@@ -28,7 +28,7 @@
                         </label>
                     </div>
                     <div class="field acceptTerms">
-                        <label>
+                        <label for="orderItem:acceptConditions">
                             <f:if condition="{0: settings.validation.orderItem.fields.acceptConditions.validator} == {0: 'Boolean'}">
                                 <f:form.checkbox id="orderItem:acceptConditions"
                                                  name="orderItem[acceptConditions]"
