[BUGFIX] #178 - add translations for products module

--- a/Resources/Public/Stylesheets/Backend/style.css
+++ b/Resources/Public/Stylesheets/Backend/style.css
@@ -9,7 +9,7 @@
     margin: 15px;
 }
 
-#module_cartorders_search_form label {
+#module_cartorders_search_form label, #module_cartproducts_search_form label {
     width: 150px;
     display: inline-block;
 }
