--- a/Resources/Private/Backend/V8/Partials/Product/Filter.html
+++ b/Resources/Private/Backend/V8/Partials/Product/Filter.html
@@ -1,24 +1,26 @@
 <div class="tx_cart_module_products_filter">
     <div class="tx_cart_module_products_filter_inner">
 
-        <f:form action="{action}" name="search" id="cartproduct_module_search">
-            <div>
-                <label for="sku">
-                    <f:translate key="tx_cart_domain_model_product.filter.sku"/>
-                    :
-                </label>
-                <f:form.textfield property="sku" id="sku" value="{searchArguments.sku}"/>
+        <f:form action="{action}" name="search" id="module_cartproducts_search_form">
+            <div class="col-50">
+                <div>
+                    <label for="sku">
+                        <f:translate key="tx_cart_domain_model_product.filter.sku"/>
+                    </label>
+                    <f:form.textfield property="sku" id="sku" value="{searchArguments.sku}"/>
+                </div>
+                <div>
+                    <label for="title">
+                        <f:translate key="tx_cart_domain_model_product.filter.title"/>
+                    </label>
+                    <f:form.textfield property="title" id="title" value="{searchArguments.title}"/>
+                </div>
             </div>
-            <div>
-                <label for="title">
-                    <f:translate key="tx_cart_domain_model_product.filter.title"/>
-                    :
-                </label>
-                <f:form.textfield property="title" id="title" value="{searchArguments.title}"/>
-            </div>
-            <div class="right">
-                <f:form.submit value="{f:translate(key: 'tx_cart.module.action.filter')}"
-                               class="searchall_submit right"/>
+            <div class="clear">&nbsp;</div><br />
+
+            <div class="col-25" style="float:right;">
+                <f:form.submit value="{f:translate(key: 'filter')}"
+                               class="searchall_submit"/>
             </div>
             <div class="clear"><!--&nbsp;--></div>
 
