[BUGFIX] #196 - update field names in error massages

--- a/Resources/Private/Partials/Cart/OrderForm/Address/Shipping.html
+++ b/Resources/Private/Partials/Cart/OrderForm/Address/Shipping.html
@@ -394,7 +394,7 @@
                                                                       disabled="true"
                                                                       data="{disable-shipping:'true'}"/>
                                                     <f:form.validationResults for="shippingAddress">
-                                                        <f:if condition="{validationResults.flattenedErrors.street_number}">
+                                                        <f:if condition="{validationResults.flattenedErrors.streetNumber}">
                                                             <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.streetNumber.0.message}</div>
                                                         </f:if>
                                                     </f:form.validationResults>
@@ -523,7 +523,7 @@
                                                                   disabled="true"
                                                                   data="{disable-shipping:'true'}"/>
                                                 <f:form.validationResults for="shippingAddress">
-                                                    <f:if condition="{validationResults.flattenedErrors.lastName}">
+                                                    <f:if condition="{validationResults.flattenedErrors.city}">
                                                         <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.city.0.message}</div>
                                                     </f:if>
                                                 </f:form.validationResults>
