--- a/Resources/Private/Backend/V8/Partials/Order/List/Actions.html
+++ b/Resources/Private/Backend/V8/Partials/Order/List/Actions.html
@@ -6,7 +6,7 @@
     <a class="btn btn-default btn-sm"
        href="{f:uri.action(action:'show', arguments:{orderItem : orderItem})}"
        title="{f:translate(key: 'tx_cart.controller.order.action.show')}">
-        <core:icon identifier="actions-Lehmayer" />
+        <core:icon identifier="actions-view" />
     </a>
 </div>
 </html>
