--- a/Resources/Private/Partials/Cart/OrderForm/ShippingMethod.html
+++ b/Resources/Private/Partials/Cart/OrderForm/ShippingMethod.html
@@ -2,7 +2,7 @@
       xmlns:cart="http://typo3.org/ns/Extcode/Cart/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<div id="checkout-step-shipping-method" class="checkout-step bg-light-grey">
+<div id="checkout-step-shipping-method" class="checkout-step bg-light-grey bottom-buffer">
     <h5 class="checkout-step-title">
         <span class="checkout-step-number"></span>
         <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.shipping_method"/></span>
