--- a/Resources/Public/Stylesheets/cart.css
+++ b/Resources/Public/Stylesheets/cart.css
@@ -11,6 +11,7 @@
 .tx-cart .clear-padding { padding: 0 !important; }
 
 .top-buffer { margin-top: 2em; }
+.bottom-buffer { margin-bottom: 2em; }
 
 .tx-cart .typo3-messages{
     margin: 0;
