[TASK] add tax identification number for billing address
add own models for billing and shipping address and
add new database field for tax identification number

Resolves: #207

--- a/Resources/Private/Backend/V8/Partials/Order/Show/Address.html
+++ b/Resources/Private/Backend/V8/Partials/Order/Show/Address.html
@@ -26,6 +26,12 @@
                 {address.fax}<br/>
             </f:if>
         </div>
+        <f:if condition="{address.taxIdentificationNumber}">
+            <br/>
+            <div>
+                {address.taxIdentificationNumber}
+            </div>
+        </f:if>
     </div>
 </f:section>
 
